Added a statistics page

--- a/MSAEmotions/MSAEmotions/MSAEmotions/MainPage.xaml
+++ b/MSAEmotions/MSAEmotions/MSAEmotions/MainPage.xaml
@@ -5,4 +5,5 @@
              x:Class="MSAEmotions.MainPage">
     <local:EmotionsPage Title="Emotion Analyser"/>
     <local:RecentPage Title="Recent Emotions"/>
+    <local:StatPage Title="Stats" />
 </TabbedPage>
