--- a/MSAEmotions/MSAEmotions/MSAEmotions/MainPage.xaml
+++ b/MSAEmotions/MSAEmotions/MSAEmotions/MainPage.xaml
@@ -2,7 +2,9 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MSAEmotions"
-             x:Class="MSAEmotions.MainPage">
+             x:Class="MSAEmotions.MainPage"
+            BackgroundColor="#14171E"
+            BarBackgroundColor="#4A505B">
     <local:EmotionsPage Title="Emotion Analyser"/>
     <local:RecentPage Title="Recent Emotions"/>
     <local:StatPage Title="Stats" />
