--- a/MSAEmotions/MSAEmotions/MSAEmotions/View/StatPage.xaml
+++ b/MSAEmotions/MSAEmotions/MSAEmotions/View/StatPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MSAEmotions.StatPage">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout Margin="20,0,20,0">
             <Grid x:Name="StatsGrid">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -13,14 +13,14 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Label Text="Number of Items:" Grid.Row="0" Grid.Column="0" />
-                <Label x:Name="EmotionCount" Grid.Row="0" Grid.Column="1" />
-                <Label Text="Most repeated emotion:" Grid.Row="1" Grid.Column="0" />
-                <Label x:Name="CommonMood" Grid.Row="1" Grid.Column="1" />
+                <Label Text="Number of Items:" TextColor="White" Grid.Row="0" Grid.Column="0" />
+                <Label x:Name="EmotionCount" TextColor="White" Grid.Row="0" Grid.Column="1" />
+                <Label Text="Most repeated emotion:" TextColor="White" Grid.Row="1" Grid.Column="0" />
+                <Label x:Name="CommonMood" TextColor="White" Grid.Row="1" Grid.Column="1" />
             </Grid>
             <Button Text="Refresh Statistics" Clicked="RefreshStats" />
             <ActivityIndicator x:Name="loading" IsRunning="False" />
-            <Label Text="Note: If most repeated emotion is tied, displays a single most repeated emotion in reverse alphabetical order" />
+            <Label Text="Note: If most repeated emotion is tied, displays a single most repeated emotion in reverse alphabetical order" TextColor="White" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
